fixed spacing

--- a/stonks-only-go-up/src/Components/Login/login.css
+++ b/stonks-only-go-up/src/Components/Login/login.css
@@ -12,6 +12,7 @@ Font-family: https://fonts.google.com/specimen/Ubuntu?preview.text_type=custom#s
     font-size: 50px;
     color: #0001B3;
     margin-bottom: 50px;
+    border-bottom: 2px solid rgb(64, 77, 255);
     font-family: 'Ubuntu', sans-serif;
 }
 
@@ -46,9 +47,7 @@ Font-family: https://fonts.google.com/specimen/Ubuntu?preview.text_type=custom#s
 }
 .loginBox > * {
     font-family: 'Ubuntu', sans-serif;
-    padding: 10px;
-    margin: 10px;
-    flex: 1 100%;
+
 
 }
 .test1loginBox{
@@ -78,9 +77,42 @@ Font-family: https://fonts.google.com/specimen/Ubuntu?preview.text_type=custom#s
 
 }
 .loginButton {
-    border-radius: 12px;
+    border-radius: 5px;
+    width: 250px;
+    height: 40px;
+}
+.loginButton2 {
+    border-radius: 5px;
+    width: 250px;
+    height: 40px;
 }
 
+.loginInputTexts {
+    border-radius: 5px;
+    width: 250px;
+    height: 40px;
+}
+
+.loginForm{
+    display: flex;
+    flex-direction: column;
+    height: 400px ;
+    justify-content: space-around;
+}
+
+.loginFormTop{
+    display: flex;
+    flex-direction: column;
+    height: 150px;
+    justify-content: space-around;
+}
+
+.loginFormBot{
+    display: flex;
+    flex-direction: column;
+    height: 100px;
+    justify-content: space-around;
+}
 @keyframes fadein {
     from { opacity: 0; }
     to   { opacity: 1; }
